--- a/index.html
+++ b/index.html
@@ -926,9 +926,9 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'gaTracking');
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-193455935-1', 'auto');
+    ga('create', 'UA-206011772-1', 'auto');
 
 
 
