--- a/index.html
+++ b/index.html
@@ -915,6 +915,42 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
+
+<!-- Banalytics -->
+<script>
+//tn: tracker name
+//tc: tracher code
+//cn: cookie name
+(function(tn, tc, cn) {
+  window[tn] = window[tn] || {
+    status: "loading_code",
+    code: tc,
+    cookieName: cn,
+    queue: [],
+    send: function(a, d){
+      d = d || {};
+      window[tn].queue.push({
+        a: a,
+        d: Object.assign(d, {timestamp: Date.now()})
+      });
+    }
+  };
+
+  if(window[tn].status == "loading_code") {
+    window[tn].status = "waiting_script";
+    var s = document.createElement("script");
+    s.async = true;
+    s.src = "https://script.google.com/macros/s/" + tc + "/dev/library?tn=" + tn;
+    document.body.appendChild(s);
+  }
+})("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
+
+//https://script.google.com/macros/s/AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg/dev
+//window["tracker"].send("onclick");
+</script>
+<!-- final Banalytics -->
+
+<!-- Google Analytics -->
   <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
@@ -934,6 +970,7 @@
 
     ga('send', 'pageview');
   </script>
+<!-- Final do GA -->
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
