script ban comentando

--- a/index.html
+++ b/index.html
@@ -917,6 +917,11 @@
 
 
 <script>
+/*
+tentar entender porque o código da linha 952 quebra as tags se ele estiver presente.
+tentar entender porque as tags não funcionam sem o cód da linha 952
+
+
 //tn: tracker name
 //tc: tracher code
 //cn: cookie name
@@ -943,7 +948,10 @@
     document.body.appendChild(s);
   }
 })
+
+("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
 //https://script.google.com/macros/s/AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg/dev
+*/
 </script>
 
 
