instalando a lib do banalytics no fonte

--- a/index.html
+++ b/index.html
@@ -917,9 +917,8 @@
 
 
 <script>
-/*
-tentar entender porque o código da linha 952 quebra as tags se ele estiver presente.
-tentar entender porque as tags não funcionam sem o cód da linha 952
+//tentar entender porque o código da linha 952 quebra as tags se ele estiver presente.
+//tentar entender porque as tags não funcionam sem o cód da linha 952
 
 
 //tn: tracker name
@@ -947,11 +946,8 @@ tentar entender porque as tags não funcionam sem o cód da linha 952
     s.src = "https://script.google.com/macros/s/" + tc + "/dev/library?tn=" + tn;
     document.body.appendChild(s);
   }
-})
-
-("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
+})("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
 //https://script.google.com/macros/s/AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg/dev
-*/
 </script>
 
 
