--- a/index.html
+++ b/index.html
@@ -917,8 +917,9 @@
 
 
 <script>
+/*
 //tentar entender porque o código da linha 952 quebra as tags se ele estiver presente.
-//tentar entender porque as tags não funcionam sem o cód da linha 952
+//perguntar como o Antonio (tony) implementou a biblioteca sem querer a tag
 
 
 //tn: tracker name
@@ -948,6 +949,7 @@
   }
 })("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
 //https://script.google.com/macros/s/AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg/dev
+*/
 </script>
 
 
