--- a/index.html
+++ b/index.html
@@ -918,6 +918,7 @@
 <script>
 //Instalação da biblioteca
 
+try {
 
 //tn: tracker name
 //tc: tracher code
@@ -950,6 +951,11 @@
 
 //Envio das informações
   window["tracker"].send("pageview");
+} catch (err) {
+debbuger 
+}
+
+
 </script>
 
 <script>
