--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@ try {
     var s = document.createElement("script");
     s.async = true;
     s.src = "https://script.google.com/macros/s/" + tc + "/dev/library?tn=" + tn;
-    document.body.appendChild(s);
+    document.head.appendChild(s);
   }
 })("tracker", "AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg", "_trackerCk");
 //https://script.google.com/macros/s/AKfycbx2j5RlkSq3TLAm9TofJE0pepcaE1kYF8ZwXJualAg/dev
