Tag PV, event click, event view
Tag de pageview, event click em "Faça orçamento" e event view quando o usuário visualiza o formulário - dessa vez com viewpoint em função de windowHeight.

--- a/index.html
+++ b/index.html
@@ -2627,7 +2627,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       let windowheight = window.innerHeight;
       let formTop = sectionForm.getBoundingClientRect().top;
-      let viewPoint = 500;
+      let viewPoint = windowheight*0.5;
 
       if(formTop < windowheight - viewPoint) {
         tracker.send('event', {
