Tag PV, event click, event view
Tag de pageview, event click em "Faça orçamento" e event view quando o usuário visualiza o formulário - fino ajuste no viewpoint: agora em função de windowHeight.

--- a/index.html
+++ b/index.html
@@ -2612,9 +2612,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         category: 'orçamento',
         action: 'click',
         label: 'botão orçamento'
-      }, 
-      { capture: false })
-    });
+      })
+    }, 
+    {capture: false});
   </script>
 
 
