--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
 
 //caso estivesse garantido que o link de entrada teria um /?source=redesocial
 
-  const sourceOfURL = document.URL.split("?")[1].split("=")[1];
+  let sourceOfURL = document.URL.split("?")[1].split("=")[1];
 
 
 
